updated constant model

--- a/notebooks/constant-model-analysis.ipynb
+++ b/notebooks/constant-model-analysis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,6 +41,7 @@
     "import glob\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
+    "import matplotlib.pylab as pl\n",
     "\n",
     "%config InlineBackend.figure_format = 'retina'\n",
     "%matplotlib inline\n",
@@ -64,42 +65,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "XX = np.zeros((3, 3, 3))"
+    "XX = np.zeros((3, 2, 4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[[0., 5., 5.],\n",
-       "        [0., 0., 0.],\n",
-       "        [0., 0., 0.]],\n",
-       "\n",
-       "       [[0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [0., 0., 0.]],\n",
-       "\n",
-       "       [[0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [0., 0., 0.]]])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 7. 0.]\n"
+     ]
     }
    ],
    "source": [
-    "XX[0, 0, 1] = 5\n",
-    "XX"
+    "XX[0, 0, 2] = 6\n",
+    "XX[0, 1, 2] = 7\n",
+    "print(XX[0, 1])"
    ]
   },
   {
@@ -108,42 +97,86 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "COLORS = pl.cm.Set2(np.linspace(0, 1, 8))\n",
+    "\n",
     "def augmented_training(Xtrain, Ttrain, Xtest, Ttest, model='MNIST'):\n",
     "\n",
     "    perturbs = ['stuck', 'dead', 'hot']\n",
     "    \n",
     "    test_pixel_change = 2\n",
     "    trials = 25\n",
-    "    training_pixels = [1, 5, 10]\n",
+    "    training_pixels = np.arange(1, 11)\n",
+    "    \n",
+    "    f = FloatProgress(min=0, max=(len(perturbs) * len(training_pixels) * (trials * len(perturbs))))\n",
+    "    display(f)\n",
     "    \n",
     "    for i, perturb in enumerate(perturbs):\n",
     "        \n",
     "        natural_acc = []\n",
-    "        augmented_acc = np.zeros((len(perturbs), 3, len(training_pixels))) # perturb - > acc (y), mean, std\n",
+    "        augmented_acc = np.zeros((len(perturbs), 3, len(training_pixels)))\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        test_perturb_1\n",
+    "        \n",
+    "               p_1 p_2 p_3 p_4\n",
+    "        mean [[0., 0., 0., 0.],\n",
+    "        std   [0., 0., 0., 0.]],\n",
+    "        \n",
+    "        test_perturn_2\n",
+    "        ...\n",
+    "        \n",
+    "        \"\"\"\n",
     "        \n",
     "        for p, pixels in enumerate(training_pixels):\n",
     "\n",
     "            Mtrain = per.change_pixel(Xtrain, pixels_to_change=pixels+1, pertrub=perturb)\n",
     "\n",
     "            if model == 'MNIST':\n",
-    "                nnet = train_mnist(Mtrain, Ttrain)\n",
+    "                nnet = per.train_mnist(Mtrain, Ttrain)\n",
     "            else:\n",
-    "                nnet = train_cifar(Mtrain, Ttrain)\n",
+    "                nnet = per.train_cifar(Mtrain, Ttrain)\n",
     "                \n",
     "            natural_acc.append(ml.percent_correct(ml.batched_use(nnet, Xtest), Ttest))\n",
     "            \n",
-    "            for t, test in enumerate(perturbs):\n",
+    "            for t, test_perturb in enumerate(perturbs):\n",
+    "                \n",
     "                tmp = []\n",
-    "                for trial in range(len(trials)):\n",
-    "\n",
-    "                    M = per.change_pixel(Xtest, pixels_to_change=test_pixel_change, pertrub='stuck')\n",
-    "            Mtest_stuck = per.change_pixel(Xtest, pixels_to_change=test_pixel_change, pertrub='stuck')\n",
-    "            Mtest_dead = per.change_pixel(Xtest, pixels_to_change=test_pixel_change, pertrub='dead')\n",
-    "            Mtest_hot = per.change_pixel(Xtest, pixels_to_change=test_pixel_change, pertrub='hot')\n",
-    "\n",
-    "            stuck_acc.append(ml.percent_correct(ml.batched_use(nnet, Mtest_stuck), Ttest))\n",
-    "            dead_acc.append(ml.percent_correct(ml.batched_use(nnet, Mtest_dead), Ttest))\n",
-    "            hot_acc.append(ml.percent_correct(ml.batched_use(nnet, Mtest_hot), Ttest))"
+    "                \n",
+    "                for trial in range(trials):\n",
+    "                    M = per.change_pixel(Xtest, pixels_to_change=test_pixel_change, pertrub=test_perturb)\n",
+    "                    tmp.append(ml.percent_correct(ml.batched_use(nnet, M), Ttest))\n",
+    "                    f.value += 1\n",
+    "                    \n",
+    "                augmented_acc[t, 0, p] = np.mean(tmp)\n",
+    "                augmented_acc[t, 1, p] = np.std(tmp)\n",
+    "        \n",
+    "        print(perturb)\n",
+    "        \n",
+    "        for t, test_perturb in enumerate(perturbs):\n",
+    "        \n",
+    "            plt.errorbar(training_pixels, augmented_acc[t, 0], yerr=augmented_acc[t, 1],\n",
+    "                         marker='.', lw=1, capsize=5, capthick=1.5, label=f'{test_perturb}',\n",
+    "                         markeredgecolor='k', color=COLORS[t])\n",
+    "        \n",
+    "        plt.plot(training_pixels, natural_acc, marker='.', lw=1, label=f'natural',\n",
+    "                 markeredgecolor='k', color=COLORS[3])\n",
+    "        \n",
+    "        plt.xticks(np.arange(1, 11))\n",
+    "        plt.xlabel('Num Training Pixel(s)')\n",
+    "        plt.ylabel('Accuracy ( \\% )')\n",
+    "        plt.legend(loc='best', fontsize='large')\n",
+    "        plt.grid(True); plt.tight_layout();\n",
+    "        plt.savefig('media/constant/' + model + perturb + '.pdf', bbox_inches='tight')\n",
+    "        plt.show();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "augmented_training(Xtrain, Ttrain, Xtest, Ttest, model='MNIST')"
    ]
   },
   {
@@ -182,17 +215,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(50000, 1, 28, 28) (50000, 1) (10000, 1, 28, 28) (10000, 1) (10000, 1, 28, 28) (10000, 1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with gzip.open('mnist.pkl.gz', 'rb') as f:\n",
     "    train_set, valid_set, test_set = pickle.load(f, encoding='latin1')\n",
@@ -211,14 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -239,21 +257,12 @@
     }
    ],
    "source": [
-    "nnet = nnc.NeuralNetwork_Convolutional(n_channels_in_image=Xtrain.shape[1],\n",
-    "                                       image_size=Xtrain.shape[2],\n",
-    "                                       n_units_in_conv_layers=[10], \n",
-    "                                       kernels_size_and_stride=[(7, 3)],\n",
-    "                                       max_pooling_kernels_and_stride=[(2, 2)],\n",
-    "                                       n_units_in_fc_hidden_layers=[],\n",
-    "                                       classes=np.unique(Ttrain), use_gpu=True, random_seed=12)\n",
-    "\n",
-    "nnet.train(Xtrain, Ttrain, n_epochs=50, batch_size=1500,\n",
-    "           optim='Adam', learning_rate=0.05, verbose=True)"
+    "nnet = per.train_mnist(Xtrain, Ttrain, verbose=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -277,11 +286,11 @@
        "  (flatten): Flatten()\n",
        "  (output_1): Linear(in_features=160, out_features=10, bias=True)\n",
        ")\n",
-       "   Network was trained for 50 epochs with a batch size of 1500 and took 6.1173 seconds.\n",
+       "   Network was trained for 50 epochs with a batch size of 1500 and took 9.6950 seconds.\n",
        "   Final objective value is 0.170"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +636,7 @@
     "def load(file_name):\n",
     "    data = []\n",
     "    \n",
-    "    for file in glob.glob('cifar-10-batches-py/' + file_name):\n",
+    "    for file in sorted(glob.glob('cifar-10-batches-py/' + file_name)):\n",
     "        with open(file, 'rb') as fo:\n",
     "            data.append(pickle.load(fo, encoding='bytes'))\n",
     "            \n",
@@ -653,23 +662,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 2 error 0.59585\n",
-      "Epoch 4 error 0.51125\n",
-      "Epoch 6 error 0.33025\n",
-      "Epoch 8 error 0.29507\n",
-      "Epoch 10 error 0.18536\n",
-      "Epoch 12 error 0.17198\n",
-      "Epoch 14 error 0.16905\n",
-      "Epoch 16 error 0.11789\n",
-      "Epoch 18 error 0.09894\n",
-      "Epoch 20 error 0.06104\n"
+      "Epoch 2 error 0.68083\n",
+      "Epoch 4 error 0.50318\n",
+      "Epoch 6 error 0.36095\n",
+      "Epoch 8 error 0.23852\n",
+      "Epoch 10 error 0.26593\n"
      ]
     }
    ],
