Add changes from slow machines

--- a/notebooks/Dolan-Noise.ipynb
+++ b/notebooks/Dolan-Noise.ipynb
@@ -178,6 +178,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Math Definitions of Noise Augmentation\n",
+    "\n",
+    "To simulate extra noise in images, a function was created to additively apply a normal distribution of augmentation values to the image, parameterized by the variance of the distribution. In other words, every pixel in each input image was altered by some value from the normal distribution (with a mean of 0). As the variance (the standard deviation of the distribution) increased, so too did the probability that a pixel would be augmented by a more extreme value.\n",
+    "\n",
+    "To illustrate this process formally, we use the following normal distribution applied "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Augmenting the Entire Dataset\n",
     "\n",
     "We can apply a perturbation technique to the entire dataset using the `dataset_manipulations` module, and then we can save off the resulting images."
