--- a/notebooks/Transfer-Learning.ipynb
+++ b/notebooks/Transfer-Learning.ipynb
@@ -55,54 +55,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'neuralnetworkclassifier' from '../src/neuralnetworkclassifier.py'>"
+       "<module 'perturb' from '../src/perturb.py'>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import imp\n",
-    "imp.reload(nnc)"
+    "imp.reload(nnc)\n",
+    "imp.reload(per)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 2 error 0.68083\n",
-      "Epoch 4 error 0.50318\n",
-      "Epoch 6 error 0.36095\n",
-      "Epoch 8 error 0.23852\n",
-      "Epoch 10 error 0.26593\n",
-      "Epoch 12 error 0.13123\n",
-      "Epoch 14 error 0.09247\n",
-      "Epoch 16 error 0.08299\n",
-      "Epoch 18 error 0.04989\n",
-      "Epoch 20 error 0.15470\n"
+      "Epoch 2 error 0.68250\n",
+      "Epoch 4 error 0.47265\n",
+      "Epoch 6 error 0.28336\n",
+      "Epoch 8 error 0.22093\n",
+      "Epoch 10 error 0.21511\n",
+      "Epoch 12 error 0.14268\n",
+      "Epoch 14 error 0.10318\n",
+      "Epoch 16 error 0.15704\n",
+      "Epoch 18 error 0.04334\n",
+      "Epoch 20 error 0.03581\n"
      ]
     }
    ],
    "source": [
-    "nnet = per.train_cifar(Xtrain, Ttrain, verbose=True)"
+    "nnet = per.train_cifar(Xtrain, Ttrain, verbose=True, random_seed=123)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -153,11 +154,11 @@
        "  (flatten): Flatten()\n",
        "  (output_8): Linear(in_features=2048, out_features=10, bias=True)\n",
        ")\n",
-       "   Network was trained for 20 epochs with a batch size of 100 and took 450.8871 seconds.\n",
-       "   Final objective value is 0.155"
+       "   Network was trained for 20 epochs with a batch size of 100 and took 451.2094 seconds.\n",
+       "   Final objective value is 0.036"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,16 +169,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(86.92, 86.83999999999999, 66.75)"
+       "(86.45, 86.42, 67.63)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +201,7 @@
        "2048"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +258,7 @@
        ")"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,23 +279,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1 error 0.24347\n",
-      "Epoch 2 error 0.18854\n",
-      "Epoch 3 error 0.16191\n",
-      "Epoch 4 error 0.14218\n",
-      "Epoch 5 error 0.12998\n",
-      "Epoch 6 error 0.12172\n",
-      "Epoch 7 error 0.11209\n",
-      "Epoch 8 error 0.10545\n",
-      "Epoch 9 error 0.09976\n",
-      "Epoch 10 error 0.09743\n"
+      "Epoch 1 error 0.23455\n",
+      "Epoch 2 error 0.19167\n",
+      "Epoch 3 error 0.16644\n",
+      "Epoch 4 error 0.14729\n",
+      "Epoch 5 error 0.13183\n",
+      "Epoch 6 error 0.12282\n",
+      "Epoch 7 error 0.11871\n",
+      "Epoch 8 error 0.12230\n",
+      "Epoch 9 error 0.12084\n",
+      "Epoch 10 error 0.10975\n"
      ]
     }
    ],
@@ -305,16 +306,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(82.83, 82.44, 83.03)"
+       "(83.48, 82.80999999999999, 83.55)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
