Update transfer learning notebook with saving
Update gitignore

--- a/notebooks/Transfer-Learning.ipynb
+++ b/notebooks/Transfer-Learning.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Transfer Learning\n",
+    "\n",
+    "This notebook explores different efforts for transfer learning applied to MNIST and CIFAR with augmented images."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -19,13 +28,14 @@
     "import numpy as np\n",
     "import mlutils as ml\n",
     "import pickle\n",
+    "import os\n",
     "\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,17 +55,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lessnoise_Xtrain = dm.apply_manipulations(Xtrain, per_func=lambda x: per.add_image_noise(x, variance=0.025))\n",
-    "lessnoise_Xtest = dm.apply_manipulations(Xtest, per_func=lambda x: per.add_image_noise(x, variance=0.0025)) "
+    "morenoise_Xtrain = dm.apply_manipulations(Xtrain, per_func=lambda x: per.add_image_noise(x, variance=0.1))\n",
+    "morenoise_Xtest = dm.apply_manipulations(Xtest, per_func=lambda x: per.add_image_noise(x, variance=0.1)) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lessnoise_Xtrain = dm.apply_manipulations(Xtrain, per_func=lambda x: per.add_image_noise(x, variance=0.025))\n",
+    "lessnoise_Xtest = dm.apply_manipulations(Xtest, per_func=lambda x: per.add_image_noise(x, variance=0.025)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +84,7 @@
        "<module 'perturb' from '../src/perturb.py'>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,34 +96,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 2 error 0.68250\n",
-      "Epoch 4 error 0.47265\n",
-      "Epoch 6 error 0.28336\n",
-      "Epoch 8 error 0.22093\n",
-      "Epoch 10 error 0.21511\n",
-      "Epoch 12 error 0.14268\n",
-      "Epoch 14 error 0.10318\n",
-      "Epoch 16 error 0.15704\n",
-      "Epoch 18 error 0.04334\n",
-      "Epoch 20 error 0.03581\n"
-     ]
-    }
-   ],
    "source": [
-    "nnet = per.train_cifar(Xtrain, Ttrain, verbose=True, random_seed=123)"
+    "## Load before you Train\n",
+    "\n",
+    "FYI, if this clean model has already been trained, you should just load it instead of training again!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if os.path.exists('./pretrained_cifar_clean'):\n",
+    "    with open('./pretrained_cifar_clean', 'rb') as f:\n",
+    "        nnet = torch.load(f)\n",
+    "        nnet.cuda()\n",
+    "else:\n",
+    "    nnet = per.train_cifar(Xtrain, Ttrain, verbose=True, random_seed=12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -154,11 +171,11 @@
        "  (flatten): Flatten()\n",
        "  (output_8): Linear(in_features=2048, out_features=10, bias=True)\n",
        ")\n",
-       "   Network was trained for 20 epochs with a batch size of 100 and took 451.2094 seconds.\n",
-       "   Final objective value is 0.036"
+       "   Network was trained for 20 epochs with a batch size of 100 and took 449.5134 seconds.\n",
+       "   Final objective value is 0.155"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,30 +186,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not os.path.exists('./pretrained_cifar_clean'):\n",
+    "    with open('./pretrained_cifar_clean', 'wb') as f:\n",
+    "        torch.save(nnet, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(86.45, 86.42, 67.63)"
+       "(86.92, 66.69, 83.72, 28.48)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clean_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, Xtest))\n",
-    "noise_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, noise_Xtest))\n",
-    "lessnoise_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, lessnoise_Xtest))\n",
-    "(clean_pct, lessnoise_pct, noise_pct)"
+    "clean_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, Xtest, 100))\n",
+    "noise_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, noise_Xtest, 100))\n",
+    "lessnoise_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, lessnoise_Xtest, 100))\n",
+    "morenoise_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, morenoise_Xtest, 100))\n",
+    "(clean_pct, noise_pct, lessnoise_pct, morenoise_pct)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +230,7 @@
        "2048"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +241,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sequential(\n",
+       "  (0): Conv2d(3, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (2): ReLU()\n",
+       "  (3): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (4): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (5): ReLU()\n",
+       "  (6): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  (7): Dropout(p=0.2, inplace=False)\n",
+       "  (8): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (9): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (10): ReLU()\n",
+       "  (11): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (12): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (13): ReLU()\n",
+       "  (14): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  (15): Dropout(p=0.2, inplace=False)\n",
+       "  (16): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (17): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (18): ReLU()\n",
+       "  (19): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (20): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (21): ReLU()\n",
+       "  (22): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  (23): Dropout(p=0.2, inplace=False)\n",
+       "  (24): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (25): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (26): ReLU()\n",
+       "  (27): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (28): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (29): ReLU()\n",
+       "  (30): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  (31): Dropout(p=0.2, inplace=False)\n",
+       "  (32): Flatten()\n",
+       "  (33): Linear(in_features=2048, out_features=256, bias=True)\n",
+       "  (34): ReLU()\n",
+       "  (35): Linear(in_features=256, out_features=512, bias=True)\n",
+       "  (36): ReLU()\n",
+       "  (37): Linear(in_features=512, out_features=10, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "other_network = nnet.transfer_learn_setup([torch.nn.Linear(2048, 256), torch.nn.ReLU(), torch.nn.Linear(256, 512), torch.nn.ReLU(), torch.nn.Linear(512, 10)])\n",
+    "other_network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -258,19 +347,19 @@
        ")"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "other_network = nnet.transfer_learn_setup([torch.nn.Linear(2048, 256), torch.nn.ReLU(), torch.nn.Linear(256, 10)])\n",
-    "other_network"
+    "transfer_network = nnet.transfer_learn_setup([torch.nn.Linear(2048, 256), torch.nn.ReLU(), torch.nn.Linear(256, 10)])\n",
+    "transfer_network"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,52 +368,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1 error 0.23455\n",
-      "Epoch 2 error 0.19167\n",
-      "Epoch 3 error 0.16644\n",
-      "Epoch 4 error 0.14729\n",
-      "Epoch 5 error 0.13183\n",
-      "Epoch 6 error 0.12282\n",
-      "Epoch 7 error 0.11871\n",
-      "Epoch 8 error 0.12230\n",
-      "Epoch 9 error 0.12084\n",
-      "Epoch 10 error 0.10975\n"
+      "Epoch 1 error 0.70836\n",
+      "Epoch 2 error 0.63564\n",
+      "Epoch 3 error 0.59420\n",
+      "Epoch 4 error 0.56575\n",
+      "Epoch 5 error 0.54048\n",
+      "Epoch 6 error 0.52803\n",
+      "Epoch 7 error 0.50638\n",
+      "Epoch 8 error 0.49487\n",
+      "Epoch 9 error 0.48905\n",
+      "Epoch 10 error 0.47610\n"
      ]
     }
    ],
    "source": [
-    "nnet.train(noise_Xtrain, Ttrain, n_epochs=10, batch_size=200,\n",
+    "nnet.train(morenoise_Xtrain, Ttrain, n_epochs=10, batch_size=200,\n",
     "           optim='Adam', learning_rate=0.0005, verbose=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(83.48, 82.80999999999999, 83.55)"
+       "(84.15, 81.85, 85.06, 53.16)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clean_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, Xtest))\n",
-    "noise_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, noise_Xtest))\n",
-    "lessnoise_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, lessnoise_Xtest))\n",
-    "(clean_pct, noise_pct, lessnoise_pct)"
+    "clean_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, Xtest, 100))\n",
+    "noise_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, noise_Xtest, 100))\n",
+    "lessnoise_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, lessnoise_Xtest, 100))\n",
+    "morenoise_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, morenoise_Xtest, 100))\n",
+    "(clean_pct, noise_pct, lessnoise_pct, morenoise_pct)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(79.75, 78.13, 80.30000000000001, 70.24000000000001)"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, Xtest, 100))\n",
+    "noise_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, noise_Xtest, 100))\n",
+    "lessnoise_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, lessnoise_Xtest, 100))\n",
+    "morenoise_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, morenoise_Xtest, 100))\n",
+    "(clean_pct, noise_pct, lessnoise_pct, morenoise_pct)"
    ]
   }
  ],
