Change filename in TL saving

--- a/notebooks/Transfer-Learning.ipynb
+++ b/notebooks/Transfer-Learning.ipynb
@@ -106,12 +106,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
-    "if os.path.exists('./pretrained_cifar_clean'):\n",
-    "    with open('./pretrained_cifar_clean', 'rb') as f:\n",
+    "if os.path.exists('./pretrained_cifar_clean.pkl'):\n",
+    "    with open('./pretrained_cifar_clean.pkl', 'rb') as f:\n",
     "        nnet = torch.load(f)\n",
     "        nnet.cuda()\n",
     "else:\n",
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
        "   Final objective value is 0.155"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,12 +186,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
-    "if not os.path.exists('./pretrained_cifar_clean'):\n",
-    "    with open('./pretrained_cifar_clean', 'wb') as f:\n",
+    "if not os.path.exists('./pretrained_cifar_clean.pkl'):\n",
+    "    with open('./pretrained_cifar_clean.pkl', 'wb') as f:\n",
     "        torch.save(nnet, f)"
    ]
   },
