Stub writing of noise augmentation

--- a/notebooks/Dolan-Noise.ipynb
+++ b/notebooks/Dolan-Noise.ipynb
@@ -182,7 +182,7 @@
     "\n",
     "To simulate extra noise in images, a function was created to additively apply a normal distribution of augmentation values to the image, parameterized by the variance of the distribution. In other words, every pixel in each input image was altered by some value from the normal distribution (with a mean of 0). As the variance (the standard deviation of the distribution) increased, so too did the probability that a pixel would be augmented by a more extreme value.\n",
     "\n",
-    "To illustrate this process formally, we use the following normal distribution applied "
+    "To illustrate this process formally, we use the normal distribution defined by $\\mathcal{N} (0, \\sigma^2)$, where the mean of the value change to any pixel is 0, and the variance $\\sigma$ is an adjustable parameter that relates directly to the \"noisiness\" of the resulting image."
    ]
   },
   {
